syntax = "proto3";

package testapp.v1;

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {}

service MapService {
    rpc Set(SetRequest) returns (SetResponse) {}
}
